syntax = "proto3";

package RouteGuide;

service RouteGuide {
  rpc GetFeauture (Point) returns (Feature);
  rpc ListFeatures (Rectangle) returns (stream Feature);
  rpc RecordRoute (stream Point) returns (RouteSummary);
  rpc RouteChat (stream RouteNote) returns (stream RouteNote);
}

message Point {
  int32 latitutde = 1;
  int32 longittue = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 feature_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}